[package]
name = "oohid"
version = "0.3.2"
edition = "2021"
license-file = "LICENSE"
description = "Generates UUIDs on CLI in various formats, very fast, outputs to .txt or stdout."
homepage = "https://www.linkedin.com/in/younghyun-chi-a60b59a9/"
repository = "https://github.com/younghyun1/uuid-gen-gui"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
debug = true

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rayon = "1.8.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
