[package]
name = "oohid"
version = "0.3.11"
edition = "2021"
license-file = "LICENSE"
description = "Generates UUIDs on CLI in various formats, very fast, outputs to .txt or stdout."
homepage = "https://www.linkedin.com/in/younghyun-chi-a60b59a9/"
repository = "https://github.com/younghyun1/oohid"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
strip = true
panic = "abort"

[profile.dev]
debug = true
panic = "abort"

[dependencies]
uuid = { version = "1.9.1", features = ["fast-rng", "v4"] }
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
